prevented text overflow from chapter's title

--- a/src/components/details-page/DetailsPage.css
+++ b/src/components/details-page/DetailsPage.css
@@ -34,40 +34,42 @@
 
 }
 
+.data-container{
+    
+}
 
 .volume-chapter-container{
-    display: grid;
-    grid-template: 1fr 3fr / 1fr 1fr 1fr;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .chapters-container{
-    grid-row: 2 / 3;
-    grid-column: 1 / 4;
+
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
 
 .chapter-list{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-column: auto;
     gap: 2rem;
 }
 
-.volume-chapter-title{
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    justify-self: flex-start;
+.volume-chapter-title>h2{
+    text-align: start;
 }
 
 
 .chapter{
-    background-color: rgb(163, 163, 163);
+    background-color: rgb(77, 77, 77);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 3rem;
-    width: 18rem;
+    border-radius: 1rem;
+    width: 13rem;
+    max-width: 13rem;
     height: 3rem;
 }
 
@@ -79,6 +81,22 @@
     text-align: start;
 }
 
-.chapter-number .chapter-title{
+.chapter-container {
+    display: flex;              /* Align items in a horizontal row */
+    justify-content: center;
+    align-items: center;        /* Vertically center the text */
+    width: 100%;                /* Ensure the container takes up the full width */
+}
 
+.chapter-number{
+    white-space: nowrap;
+    margin-right: .2rem; /* Add a small space between the number and title */
+}
+
+.chapter-title {
+    /*Prevent title from overflowing */
+    white-space: nowrap;        
+    overflow: hidden;           
+    text-overflow: ellipsis;
+    max-width: 50%;
 }
