--- a/src/components/manga-preview/MangaPreview.css
+++ b/src/components/manga-preview/MangaPreview.css
@@ -34,7 +34,7 @@
     max-width: 17rem;
     width: 17rem;
     height: auto;
-    max-height: 22rem;
+    max-height: 25rem;
     border-radius: 0.5rem;
     grid-row: 1 / 3;
     justify-self: center;
