--- a/src/components/reader/Reader.css
+++ b/src/components/reader/Reader.css
@@ -10,6 +10,8 @@
     height: auto;
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+    justify-self: center;
+    align-self: center;
 }
 
 .control-buttons-container{
@@ -18,6 +20,7 @@
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     justify-self: center;
+    align-self: center;
     display: flex;
     justify-content: space-evenly;
 }
@@ -26,6 +29,7 @@
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     justify-self: flex-start;
+    align-self: center;
 }
 
 .logo{
